--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 <body>
 	<main class="main"></main>
 	@@include('components/page-blocks/_features.html')
+	@@include('components/page-blocks/_price.html')
 	@@include('components/page-blocks/_scripts.html')
 </body>
 
