--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 @@include('components/page-blocks/_head.html',{
-"lang":"en",
-"title":"Easy-webdev-startpack v3.0",
+"lang":"ru",
+"title":"Forkio",
 "description":"Gulp pack for easy html/php markup development",
 "keywords":"",
 "favicon":"img/favicons/favicon",
@@ -10,7 +10,7 @@
 <body>
 	@@include('components/page-blocks/_header.html')
 	<main class="main"></main>
-	@@include('components/page-blocks/_contactUs.html')
+	
 	@@include('components/page-blocks/_footer.html')
 	@@include('components/page-blocks/_scripts.html')
 </body>
