--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 @@include('components/page-blocks/_head.html',{
-"lang":"ru",
+"lang":"",
 "title":"Forkio",
 "description":"Gulp pack for easy html/php markup development",
 "keywords":"",
