--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 @@include('components/page-blocks/_head.html',{
 "lang":"en",
-"title":"Easy-webdev-startpack v3.0",
-"description":"Gulp pack for easy html/php markup development",
-"keywords":"",
-"favicon":"img/favicons/favicon",
 })
 
 <body>
-	<main class="main"></main>
-	@@include('components/page-blocks/_features.html')
-	@@include('components/page-blocks/_price.html')
+	<div class="body__container">
+		@@include('components/page-blocks/_header.html')
+		@@include('components/page-blocks/_main.html')
+	</div>
+
+	@@include('components/page-blocks/_footer.html')
 	@@include('components/page-blocks/_scripts.html')
 </body>
 
